--- a/ur5_conf/package.xml
+++ b/ur5_conf/package.xml
@@ -6,7 +6,7 @@
   <description>
      An automatically generated package with all the configuration and launch files for using the ur5 with the MoveIt Motion Planning Framework
   </description>
-  <maintainer email="jhon@gmail.com">jhonf</maintainer>
+  <maintainer email="jhon.moreno451@gmail.com">jhonf</maintainer>
 
   <license>BSD</license>
 
@@ -14,7 +14,7 @@
   <url type="bugtracker">https://github.com/ros-planning/moveit2/issues</url>
   <url type="repository">https://github.com/ros-planning/moveit2</url>
 
-  <author email="jhon@gmail.com">jhonf</author>
+  <author email="jhon.moreno451@gmail.com">jhonf</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
